# AvatarSettingsManager-Lite

./: .gitignore  .markdownlint.json  .markdownlintignore  .shellcheckrc  .yamllint.yml  AIPOLICY.md  CHANGELOG.md  CI_AUDIT.md  CLAUDE.original.md  COMPATIBILITY.md  LICENSE  README.md  compatibility.contract.json  export-package.ps1  generate-icon-metas.ps1  gsd-discussion-3926.html  make-icons.ps1
.github/: FUNDING.yml  actionlint.yaml
.github/workflows/: auto-tag.yml  build-listing.yml  ci.yml  lint.yml  nightly.yml  release.yml  scheduled.yml  secret-scan.yml  unity-compile.yml  unity-test.yml
ProjectSettings/: ProjectSettings.asset
Tools/ci/: WORKTREE-AGENTS.md  asmlite-tests-audit.md  asmlite-visible-overlay.py  check-required-statuses.py  editmode-batch-runs.json  evaluate-compatibility-contract.py  generate-csproj.sh  run-UAT-smoke.ps1  run-UAT-smoke.sh  run-editmode-local.sh  run-visible-smoke-local.sh  rust-overlay-qa-design-lock.md  setup-git-hooks.sh  test-suite-ledger.json  verify-commit-identity.sh  verify-editmode-selector-parity.py  (+10 more)
Tools/ci/rust-overlay/: Cargo.toml
Tools/ci/rust-overlay/src/: app.rs  catalog.rs  event_reader.rs  gui.rs  lib.rs  main.rs  model.rs  protocol.rs  session.rs  theme.rs  ui_suite_list.rs  unity_launcher.rs
Tools/ci/rust-overlay/tests/: overlay_gui_contract.rs
Website/: index.html  styles.css
ci/: generate-csproj.sh  verify-commit-identity.sh  verify-release-gate.ps1  verify-secret-scan.ps1  verify-shadow-project-hygiene.ps1
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
(+469 files in other folders)
