[package]
name = "asmlite_smoke_contract"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "asmlite_smoke_overlay"
path = "src/main.rs"

[dependencies]
eframe = "0.28"
egui = "0.28"
egui-phosphor = "=0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
